# Theorem-Prover

./: .gitignore  CMakeLists.txt  README.md
Logic/: logic.cpp  logic.h  logic.hpp
smt-bench/: eight_queens.smt2
